Always clear TPM attestation keys on ChromeOS when removing media licenses

Clearing the TPM attestation keys is not dependent on plugins being enabled,
(or Flash), so cleanup the #if ... #endif blocks to make this clear.

BUG=692818
TEST=compiles

Review-Url: https://codereview.chromium.org/2730803002
Cr-Commit-Position: refs/heads/master@{#454472}

Former-commit-id: 521d60812176375b2a0f196c7ccd31f38d524efa